--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2309,8 +2309,8 @@ then {11,99 TRY/Month}*/
 "delete_popup_body" = "¿Está seguro de que desea borrarlas?";
 "please_enter_your_msisdn" = "Añadir tu número de teléfono a lifebox es la forma más segura de proteger tu cuenta de por vida. Añade tu número de teléfono para seguir accediendo a tus recuerdos en lifebox.";
 "grace_banner_paycell_text" = "";
-"no_video_to_print_popup_title" = "";
-"no_video_to_print_popup_body" = "";
+"no_video_to_print_popup_title" = "¡Los vídeos seleccionados no se pueden enviar a imprimir!";
+"no_video_to_print_popup_body" = "Para continuar con el proceso de impresión, sólo tiene que seleccionar una foto.";
 
 /*Toplam çekiliş hak sayısı*/
 "gamification_raffle_count" = "You Have %d Raffle Right(s)";
@@ -2319,53 +2319,52 @@ then {11,99 TRY/Month}*/
 "gamification_raffle_dates" = "Participation date in the draw:";
 
 /*Çekiliş özetini gör buton*/
-"gamification_raffle_brief" = "Ver Resumen del Sorteo";
+"gamification_raffle_brief" = "See Raffle Summary";
 
 /*Çekiliş özet açıklaması*/
-"gamification_event_description" = "Utiliza las siguientes funciones cada mes para aumentar tus posibilidades de ganar el sorteo.";
+"gamification_event_description" = "Use the features below every month to increase your chances of winning the raffle.";
 
 /*Yarın tekrar gel metni*/
-"gamification_comeback" = "Permanezca atento.";
+"gamification_comeback" = "Stay tuned.";
 
 /*Paket satın alma kuralı için*/
-"gamification_package_rule" = "Comprar Paquete";
-"gamification_raffle_info" = "Detalles de la Campaña";
-"gamification_raffle_draw" = "Haga clic para ver las condiciones de la campaña.";
-"gamification_raffle_summary" = "Ver Resumen del Sorteo";
-"gamification_event_not_trigerred" = "Esta función aún no se ha utilizado. ¡Inténtelo ahora!";
-"gamification_event_trigger_count" = "You Have %d Raffle Rights";
+"gamification_package_rule" = "Buy Package";
+"gamification_raffle_info" = "Campaign Details";
+"gamification_raffle_draw" = "Click for campaign conditions.";
+"gamification_raffle_summary" = "See Raffle Summary";
+"gamification_event_not_trigerred" = "This feature has not been used yet.Try now!";
 "gamification_event_trigger_count" = "You Have %d Raffle Right(s)";
-"gamification_event_completed" = "Ha completado sus derechos este %@.";
-"gamification_total_count" = "Ha Ganado un Total de %d Derechos de Sorteo.";
-"gamification_campaign_conditions" = "Detalles de la Campaña";
-"gamification_rules" = "Requisitos para el Sorteo";
-"gamification_campaign_policy_title" = "Condiciones de Participación en la Campaña";
+"gamification_event_completed" = "You have completed your rights this %@.";
+"gamification_total_count" = "You Won a Total of %d Raffle Right(s).";
+"gamification_campaign_conditions" = "Campaign Details";
+"gamification_rules" = "Raffle Eligibility";
+"gamification_campaign_policy_title" = "Campaign Participation Conditions";
 "gamification_raffle_win" = "";
-"gamification_title_upload" = "Cargar Foto/Vídeo";
-"gamification_title_act_faceimage" = "Activar el Reconocimiento de Caras/Objetos";
-"gamification_buy" = "Comprar un Paquete";
-"gamification_photopick" = "Crear Photopick";
-"gamification_create_collage" = "Crear Collage";
-"gamification_print" = "Obtener Copias de Fotos";
-"gamification_invite" = "Invitar a un Amigo";
-"gamification_createstory" = "Crear Historia";
-"gamification_createalbum" = "Crear un Álbum";
-"gamification_act_faceimage" = "Activar el Reconocimiento de Caras/Objetos";
-"gamification_upload" = "Subir Foto/Vídeo";
-"gamification_title_buy" = "Comprar Paquete";
-"gamification_title_photopick" = "Crear Photopick";
-"gamification_title_create_collage" = "Crear Collage";
-"gamification_title_print" = "Obtener Copias de Fotos";
-"gamification_title_invite" = "Invitar a un Amigo";
-"gamification_title_createstory" = "Crear Historia";
-"gamification_title_createalbum" = "Crear un Álbum";
+"gamification_title_upload" = "Upload Photo/Video";
+"gamification_title_act_faceimage" = "Turn on Face Object Recognition";
+"gamification_buy" = "Purchasing a Package";
+"gamification_photopick" = "Create Photopick";
+"gamification_create_collage" = "Create Collage";
+"gamification_print" = "Get Photo Prints";
+"gamification_invite" = "Invite a Friend";
+"gamification_createstory" = "Create Story";
+"gamification_createalbum" = "Create an Album";
+"gamification_act_faceimage" = "Turn on Face/Object Recognition";
+"gamification_upload" = "Upload Photo/Video";
+"gamification_title_buy" = "Buy Package";
+"gamification_title_photopick" = "Create Photopick";
+"gamification_title_create_collage" = "Create Collage";
+"gamification_title_print" = "Get Photo Prints";
+"gamification_title_invite" = "Invite a Friend";
+"gamification_title_createstory" = "Create Story";
+"gamification_title_createalbum" = "Create Album";
 "timeline_header_backup" = "Los mejores recuerdos de 2023";
 "winter_video_timeline_header" = "Tus Recuerdos más Vívidos del Invierno";
 "yearly" = "Anualmente";
 "timeline_description" = "Hemos preparado una sorpresa de los recuerdos que guardaste en lifebox este invierno. Descúbrelos ahora.";
 "photo_max_selection_title_x" = "";
 "photo_max_selection_body_x" = "";
-"right" = "";
-"rights" = "";
 "gamification_total_earn_point_1" = "You earned %@";
 "gamification_total_earn_point_2" = "%d raffle right(s)";
+"right" = "";
+"rights" = "";
