--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2572,8 +2572,8 @@ then {11,99 TRY/Month}*/
 "delete_popup_body" = "Êtes-vous sûr de vouloir les supprimer?";
 "please_enter_your_msisdn" = "L'ajout de votre numéro de téléphone à lifebox est le moyen le plus fiable de protéger votre compte à vie. Veuillez ajouter votre numéro de téléphone pour continuer à accéder à vos souvenirs dans lifebox.";
 "grace_banner_paycell_text" = "";
-"no_video_to_print_popup_title" = "";
-"no_video_to_print_popup_body" = "";
+"no_video_to_print_popup_title" = "Les vidéos sélectionnées ne peuvent pas être envoyées à l'impression !";
+"no_video_to_print_popup_body" = "Pour continuer le processus d'impression, il suffit de sélectionner une photo.";
 
 /*Toplam çekiliş hak sayısı*/
 "gamification_raffle_count" = "You Have %d Raffle Right(s)";
@@ -2582,53 +2582,52 @@ then {11,99 TRY/Month}*/
 "gamification_raffle_dates" = "Participation date in the draw:";
 
 /*Çekiliş özetini gör buton*/
-"gamification_raffle_brief" = "Voir le Résumé du Tirage au Sort";
+"gamification_raffle_brief" = "See Raffle Summary";
 
 /*Çekiliş özet açıklaması*/
-"gamification_event_description" = "Utilisez les fonctionnalités ci-dessous chaque mois pour augmenter vos chances de gagner au tirage au sort.";
+"gamification_event_description" = "Use the features below every month to increase your chances of winning the raffle.";
 
 /*Yarın tekrar gel metni*/
 "gamification_comeback" = "Restez à l'écoute.";
 
 /*Paket satın alma kuralı için*/
-"gamification_package_rule" = "Acheter un Package";
-"gamification_raffle_info" = "Détails de la Campagne";
-"gamification_raffle_draw" = "Cliquez pour connaître les conditions de la campagne.";
-"gamification_raffle_summary" = "Voir le Résumé du Tirage au Sort";
-"gamification_event_not_trigerred" = "Cette fonction n'a pas encore été utilisée, essayez maintenant !";
-"gamification_event_trigger_count" = "You Have %d Raffle Rights";
+"gamification_package_rule" = "Buy Package";
+"gamification_raffle_info" = "Campaign Details";
+"gamification_raffle_draw" = "Click for campaign conditions.";
+"gamification_raffle_summary" = "See Raffle Summary";
+"gamification_event_not_trigerred" = "This feature has not been used yet.Try now!";
 "gamification_event_trigger_count" = "You Have %d Raffle Right(s)";
-"gamification_event_completed" = "Vous avez complété vos droits ce %@.";
-"gamification_total_count" = "Vous Avez Gagné un Total de %d Droits au Tirage au Sort.";
-"gamification_campaign_conditions" = "Détails de la Campagne";
-"gamification_rules" = "Éligibilité au Tirage au Sort";
-"gamification_campaign_policy_title" = "Conditions de Participation à la Campagne";
+"gamification_event_completed" = "You have completed your rights this %@.";
+"gamification_total_count" = "You Won a Total of %d Raffle Right(s).";
+"gamification_campaign_conditions" = "Campaign Details";
+"gamification_rules" = "Raffle Eligibility";
+"gamification_campaign_policy_title" = "Campaign Participation Conditions";
 "gamification_raffle_win" = "";
-"gamification_title_upload" = "Télécharger la Photo/Vidéo";
-"gamification_title_act_faceimage" = "Activer la Reconnaissance des Visages/Objets";
-"gamification_buy" = "Acheter un Package";
-"gamification_photopick" = "Créer un Photopick";
-"gamification_create_collage" = "Créer un Collage";
-"gamification_print" = "Obtenir des Tirages Photo";
-"gamification_invite" = "Inviter un Ami";
-"gamification_createstory" = "Créer une Histoire";
-"gamification_createalbum" = "Créer un Album";
-"gamification_act_faceimage" = "Activer la Reconnaissance des Visages/Objets";
-"gamification_upload" = "Télécharger la Photo/Vidéo";
-"gamification_title_buy" = "Acheter un Package";
-"gamification_title_photopick" = "Créer un Photopick";
-"gamification_title_create_collage" = "Créer un Collage";
-"gamification_title_print" = "Obtenir des Tirages Photo";
-"gamification_title_invite" = "Inviter un Ami";
-"gamification_title_createstory" = "Créer une Histoire";
-"gamification_title_createalbum" = "Créer un Album";
+"gamification_title_upload" = "Upload Photo/Video";
+"gamification_title_act_faceimage" = "Turn on Face Object Recognition";
+"gamification_buy" = "Purchasing a Package";
+"gamification_photopick" = "Create Photopick";
+"gamification_create_collage" = "Create Collage";
+"gamification_print" = "Get Photo Prints";
+"gamification_invite" = "Invite a Friend";
+"gamification_createstory" = "Create Story";
+"gamification_createalbum" = "Create an Album";
+"gamification_act_faceimage" = "Turn on Face/Object Recognition";
+"gamification_upload" = "Upload Photo/Video";
+"gamification_title_buy" = "Buy Package";
+"gamification_title_photopick" = "Create Photopick";
+"gamification_title_create_collage" = "Create Collage";
+"gamification_title_print" = "Get Photo Prints";
+"gamification_title_invite" = "Invite a Friend";
+"gamification_title_createstory" = "Create Story";
+"gamification_title_createalbum" = "Create Album";
 "timeline_header_backup" = "Les Meilleurs Souvenirs De 2023";
 "winter_video_timeline_header" = "Vos Plus Beaux Souvenirs D'Hiver";
 "yearly" = "Annuel";
 "timeline_description" = "Nous vous avons préparé une surprise à partir des souvenirs que vous avez sauvegardés dans lifebox cet hiver. Découvrez-les dès maintenant.";
 "photo_max_selection_title_x" = "";
 "photo_max_selection_body_x" = "";
-"right" = "";
-"rights" = "";
 "gamification_total_earn_point_1" = "You earned %@";
 "gamification_total_earn_point_2" = "%d raffle right(s)";
+"right" = "";
+"rights" = "";
