--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2310,8 +2310,8 @@ then {11,99 TRY/Month}*/
 "delete_popup_body" = "Jeni i sigurt që dëshironi të fshini fotot?";
 "please_enter_your_msisdn" = "Shtimi i numrit tuaj të telefonit në lifebox është mënyra më e besueshme për të mbrojtur llogarinë tuaj gjatë gjithë jetës. Ju lutemi shtoni numrin tuaj të telefonit për të vazhduar qasjen në kujtimet tuaja në lifebox.";
 "grace_banner_paycell_text" = "";
-"no_video_to_print_popup_title" = "";
-"no_video_to_print_popup_body" = "";
+"no_video_to_print_popup_title" = "Videot e zgjedhura nuk mund të dërgohen për shtypje!";
+"no_video_to_print_popup_body" = "Për të vazhduar procesin e shtypjes, thjesht zgjidhni një foto.";
 
 /*Toplam çekiliş hak sayısı*/
 "gamification_raffle_count" = "You Have %d Raffle Right(s)";
@@ -2320,53 +2320,52 @@ then {11,99 TRY/Month}*/
 "gamification_raffle_dates" = "Participation date in the draw:";
 
 /*Çekiliş özetini gör buton*/
-"gamification_raffle_brief" = "Shih Përmbledhjen e Lotarisë";
+"gamification_raffle_brief" = "See Raffle Summary";
 
 /*Çekiliş özet açıklaması*/
-"gamification_event_description" = "Përdorni veçoritë më poshtë çdo muaj për të rritur shanset tuaja për të fituar lotarinë.";
+"gamification_event_description" = "Use the features below every month to increase your chances of winning the raffle.";
 
 /*Yarın tekrar gel metni*/
-"gamification_comeback" = "Qëndroni të sintonizuar.";
+"gamification_comeback" = "Stay tuned.";
 
 /*Paket satın alma kuralı için*/
-"gamification_package_rule" = "Blej Paketë";
-"gamification_raffle_info" = "Detajet e Fushatës";
-"gamification_raffle_draw" = "Klikoni për kushtet e fushatës.";
-"gamification_raffle_summary" = "Shih Përmbledhjen e Lotarisë";
-"gamification_event_not_trigerred" = "Kjo veçori nuk është përdorur ende. Provoni tani!";
-"gamification_event_trigger_count" = "You Have %d Raffle Rights";
+"gamification_package_rule" = "Buy Package";
+"gamification_raffle_info" = "Campaign Details";
+"gamification_raffle_draw" = "Click for campaign conditions.";
+"gamification_raffle_summary" = "See Raffle Summary";
+"gamification_event_not_trigerred" = "This feature has not been used yet.Try now!";
 "gamification_event_trigger_count" = "You Have %d Raffle Right(s)";
-"gamification_event_completed" = "Ju keni përfunduar të drejtat tuaja këtë %@.";
-"gamification_total_count" = "Ju Fituat Një Total Prej %d të Drejtash Lotarie.";
-"gamification_campaign_conditions" = "Detajet e Fushatës";
-"gamification_rules" = "Kushtet e Lotarisë";
-"gamification_campaign_policy_title" = "Kushtet e Pjesëmarrjes në Fushatë";
+"gamification_event_completed" = "You have completed your rights this %@.";
+"gamification_total_count" = "You Won a Total of %d Raffle Right(s).";
+"gamification_campaign_conditions" = "Campaign Details";
+"gamification_rules" = "Raffle Eligibility";
+"gamification_campaign_policy_title" = "Campaign Participation Conditions";
 "gamification_raffle_win" = "";
-"gamification_title_upload" = "Ngarko Foto/Video";
-"gamification_title_act_faceimage" = "Aktivizoni Njohjen e Fytyrës/Objektit";
-"gamification_buy" = "Blej Paketë";
-"gamification_photopick" = "Krijoni Photopick";
-"gamification_create_collage" = "Krijoni Kolazh";
-"gamification_print" = "Merrni Printime Fotografish";
-"gamification_invite" = "Ftoni Një Mik";
-"gamification_createstory" = "Krijoni Histori";
-"gamification_createalbum" = "Krijoni Një Album";
-"gamification_act_faceimage" = "Aktivizoni Njohjen e Fytyrës/Objektit";
-"gamification_upload" = "Ngarko Foto/Video";
-"gamification_title_buy" = "Blej Paketë";
-"gamification_title_photopick" = "Krijoni Photopick";
-"gamification_title_create_collage" = "Krijoni Kolazh";
-"gamification_title_print" = "Merrni Printime Fotografish";
-"gamification_title_invite" = "Ftoni Një Mik";
-"gamification_title_createstory" = "Krijoni Histori";
-"gamification_title_createalbum" = "Krijoni Një Album";
+"gamification_title_upload" = "Upload Photo/Video";
+"gamification_title_act_faceimage" = "Turn on Face Object Recognition";
+"gamification_buy" = "Purchasing a Package";
+"gamification_photopick" = "Create Photopick";
+"gamification_create_collage" = "Create Collage";
+"gamification_print" = "Get Photo Prints";
+"gamification_invite" = "Invite a Friend";
+"gamification_createstory" = "Create Story";
+"gamification_createalbum" = "Create an Album";
+"gamification_act_faceimage" = "Turn on Face/Object Recognition";
+"gamification_upload" = "Upload Photo/Video";
+"gamification_title_buy" = "Buy Package";
+"gamification_title_photopick" = "Create Photopick";
+"gamification_title_create_collage" = "Create Collage";
+"gamification_title_print" = "Get Photo Prints";
+"gamification_title_invite" = "Invite a Friend";
+"gamification_title_createstory" = "Create Story";
+"gamification_title_createalbum" = "Create Album";
 "timeline_header_backup" = "Kujtimet Më të Mira Të Vitit 2023";
 "winter_video_timeline_header" = "Kujtimet Tuaja Më Të Gjalla Të Dimrit";
 "yearly" = "Vjetore";
 "timeline_description" = "Ne kemi përgatitur për ju një surprizë nga kujtimet që keni ruajtur në lifebox këtë dimër. Zbuloni ato tani.";
 "photo_max_selection_title_x" = "";
 "photo_max_selection_body_x" = "";
-"right" = "";
-"rights" = "";
 "gamification_total_earn_point_1" = "You earned %@";
 "gamification_total_earn_point_2" = "%d raffle right(s)";
+"right" = "";
+"rights" = "";
