--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2414,9 +2414,9 @@ then {11,99 TRY/Month}*/
 "timeline_description" = "Bu kış lifebox’ta yedeklediğin anılarından sana bir sürpriz hazırladık. Hemen keşfet.";
 "photo_max_selection_title_x" = "";
 "photo_max_selection_body_x" = "";
-"right" = "hakkın";
-"rights" = "hakkın";
 
 /*Fuzzy*/
 "gamification_total_earn_point_1" = "Toplam %@ kazandın";
 "gamification_total_earn_point_2" = "%d çekiliş puanı";
+"right" = "";
+"rights" = "";
